--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,5 +6,8 @@
         <div class="col-md-12">
             <h2>Home</h2>
         </div>
+        <div class="col-md-12">
+            <a [routerLink]="'/login'">Login</a>
+        </div>
     </div>
 </div>
