--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,16 +10,17 @@
 </div>
 
 <div class="col-md-12 col-lg-12 col-xs-12">
+  <p class="text-danger" *ngIf="!status">Invalid Login Credentials!</p>
   <form class="formstyle">
     <div class="form-group">
-      <label>Username</label>
-      <input type="text" name="username" class="form-control">
+      <label>Email</label>
+      <input type="text" name="username" class="form-control" [formControl]="emailFormControl" required>
     </div>
     <div class="form-group">
       <label>Password</label>
-      <input type="password" name="password" class="form-control">
+      <input type="password" name="password" class="form-control" [formControl]="passwordFormControl" required>
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" [disabled]="emailFormControl.invalid || passwordFormControl.invalid" (click)="login()" class="btn btn-primary">Login</button>
   </form>
 </div>
 <div class="contianer">
