--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -14,7 +14,8 @@
     <form class="formstyle">
       <div class="form-group">
         <label>First Name</label>
-        <input placeholder="First name" type="text" name="firstname" class="form-control">
+        <input placeholder="First name" type="text" name="firstname" class="form-control" [formControl]="firstNameFormControl">
+        <label *ngIf="firstNameFormControl.hasError('required')">First name required</label>
       </div>
       <div class="form-group">
         <label>Middle Name (optional)</label>
@@ -22,17 +23,22 @@
       </div>
       <div class="form-group">
         <label>Last Name</label>
-        <input placeholder="Last name" type="text" name="lastname" class="form-control">
+        <input placeholder="Last name" type="text" name="lastname" class="form-control" [formControl]="lastNameFormControl">
+        <label *ngIf="lastNameFormControl.hasError('required')">Last name required</label>
       </div>
       <div class="form-group">
+        
         <label>MSU Email</label>
-        <input placeholder="Enter email" type="email" name="email" class="form-control">
+        <input placeholder="Enter email" type="email" name="email" [formControl]="emailFormControl" class="form-control" >
+        <label *ngIf="emailFormControl.hasError('required')">Email required</label>
       </div>
       <div class="form-group">
         <label>Password</label>
-        <input placeholder="Password" type="password" name="password" class="form-control">
+        <input placeholder="Password" type="password" name="password" class="form-control" [formControl]="passwordFormControl">
+        <label *ngIf="passwordFormControl.hasError('required')">Password required</label>
+        <label *ngIf="passwordFormControl.hasError('minlength')">Password length must be atleast 4 characters</label>
       </div>
-      <button type="submit" class="btn btn-primary">Register</button>
+      <button type="submit" [disabled]="emailFormControl.invalid || firstNameFormControl.invalid || lastNameFormControl.invalid || passwordFormControl.invalid" (click)="register()" class="btn btn-primary">{{buttonText}}</button>
     </form>
   </div>
 </div>
