--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,6 +5,7 @@
     <div class="col-md-12"> 
       <h2 class="mt-5 text-center"><b>Register</b></h2>
       <br>
+      <label class="text-danger" *ngIf="alreadyRegistered">Email already registered!</label>
     </div>
   </div>
 </div>
@@ -14,29 +15,39 @@
     <form class="formstyle">
       <div class="form-group">
         <label>First Name</label>
+        <br>
+        <label class="text-danger" *ngIf="firstNameFormControl.hasError('required')">First name required</label>
         <input placeholder="First name" type="text" name="firstname" class="form-control" [formControl]="firstNameFormControl">
-        <label *ngIf="firstNameFormControl.hasError('required')">First name required</label>
+        
       </div>
       <div class="form-group">
         <label>Middle Name (optional)</label>
-        <input placeholder="Middle name" type="text" name="middlename" class="form-control">
+        <input placeholder="Middle name" type="text" name="middlename" class="form-control" [formControl]="middleNameFormControl">
+        
       </div>
       <div class="form-group">
         <label>Last Name</label>
+        <br>
+        <label class="text-danger" *ngIf="lastNameFormControl.hasError('required')">Last name required</label>
         <input placeholder="Last name" type="text" name="lastname" class="form-control" [formControl]="lastNameFormControl">
-        <label *ngIf="lastNameFormControl.hasError('required')">Last name required</label>
+        
       </div>
       <div class="form-group">
         
         <label>MSU Email</label>
+        <br>
+        <label class="text-danger" *ngIf="!msuEmail">Email must be @msu.edu</label>
+        <label class="text-danger" *ngIf="emailFormControl.hasError('required')">Email required</label>
         <input placeholder="Enter email" type="email" name="email" [formControl]="emailFormControl" class="form-control" >
-        <label *ngIf="emailFormControl.hasError('required')">Email required</label>
+        
       </div>
       <div class="form-group">
         <label>Password</label>
+        <br>
+        <label class="text-danger" *ngIf="passwordFormControl.hasError('required')">Password required</label>
+        <label class="text-danger" *ngIf="passwordFormControl.hasError('minlength')">Password length must be atleast 4 characters</label>
         <input placeholder="Password" type="password" name="password" class="form-control" [formControl]="passwordFormControl">
-        <label *ngIf="passwordFormControl.hasError('required')">Password required</label>
-        <label *ngIf="passwordFormControl.hasError('minlength')">Password length must be atleast 4 characters</label>
+
       </div>
       <button type="submit" [disabled]="emailFormControl.invalid || firstNameFormControl.invalid || lastNameFormControl.invalid || passwordFormControl.invalid" (click)="register()" class="btn btn-primary">{{buttonText}}</button>
     </form>
