Continued build on confirmation email. Cookies and sessions WIP

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,8 +6,9 @@
         <div class="col-md-12">
             <h2>Home</h2>
         </div>
-        <div class="col-md-12">
-            <a [routerLink]="'/login'">Login</a>
+        <div class="col-md-6">
+            <a class="mr-5" [routerLink]="'/login'">Student Login</a>
+            <a [routerLink]="'/login'">Lender Login</a>
         </div>
     </div>
 </div>
