--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
       <a class="navbar-brand" href="#">SmartiFi</a>
       <div class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item" [routerLink]="'/home'">Home </a>
+          <a class="navbar-item" [routerLink]="'/'">Home </a>
           <a class="navbar-item" [routerLink]="'/loandash'"> Dashboard </a>
           <a class="navabr-item" [routerLink]="'/showapplications'"> Open Loan Applications </a>
           <a class="navabr-item" [routerLink]="'/apply'"> Apply For A Loan </a>
