--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
 
 <div class="col-md-12 col-lg-12 col-xs-12">
   <p class="text-danger" *ngIf="!status">Invalid Login Credentials!</p>
-  <form class="formstyle">
+  <form class="formstyle" (submit)="login($event)">
     <div class="form-group">
       <label>Email</label>
       <input type="text" name="username" class="form-control" [formControl]="emailFormControl" required>
@@ -20,7 +20,7 @@
       <label>Password</label>
       <input type="password" name="password" class="form-control" [formControl]="passwordFormControl" required>
     </div>
-    <button type="submit" [disabled]="emailFormControl.invalid || passwordFormControl.invalid" (click)="login()" class="btn btn-primary">Login</button>
+    <button type="submit" [disabled]="emailFormControl.invalid || passwordFormControl.invalid" class="btn btn-primary">Login</button>
   </form>
 </div>
 <div class="contianer">
