--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,11 +4,11 @@
       <div class="navbar-menu">
         <div class="navbar-start">
           <a class="navbar-item" [routerLink]="'/'">Home </a>
-          <a class="navbar-item" [routerLink]="'/loandash'"> Dashboard </a>
-          <a class="navabr-item" [routerLink]="'/showapplications'"> Open Loan Applications </a>
-          <a class="navabr-item" [routerLink]="'/apply'"> Apply For A Loan </a>
+          <a *ngIf="loggedin && role ==='STUDENT'" class="navbar-item" [routerLink]="'/studentdash'"> Dashboard </a>
+          <a *ngIf="loggedin && role ==='LENDER'" class="navbar-item" [routerLink]="'/studentdash'"> Dashboard </a>
+          <a *ngIf="loggedin" class="navbar-item" [routerLink]="'/showapplications'"> Open Loan Applications </a>
+          <a *ngIf="loggedin" class="navbar-item" [routerLink]="'/apply'"> Apply For A Loan </a>
 
         </div>
       </div>
-
     </nav>
