--- a/src/app/application-portal/application-form/application-form.component.html
+++ b/src/app/application-portal/application-form/application-form.component.html
@@ -1,32 +1,5 @@
-<div class="container">
-  <app-header></app-header>
-</div>
-<!-- <div class="container">
-  <form class="text-center border border-light p-5" [formGroup]="loanApplicationForm" (ngSubmit)="onSubmit()" novalidate>
-    <p class="h4">Loan Application Form</p>
-
-    <div formGroupName="personalData" novalidate>
-
-      <input class="form-control mb-4" formControlName="email" /> <input class="form-control mb-4" formControlName="mobile" />
-  
-      <select formControlName="schoolYear">
-        <option *ngFor="let schoolYear of schoolYears" [value] = "schoolYear">
-          {{schoolYear}}
-        </option>
-      </select>
-    </div>  
-    <select formControlName="requestType">
-      <option *ngFor="let requestType of requestTypes" [value]="requestType"> {{requestType}} </option>
-    </select>
-    <input formControlName="text" />
-    <button type="submit" mdbBtn color="primary" mdbWavesEffect
-    [disabled] = "loanApplicationForm.pristine">
-    Save
-  </button>
-  <button class="text-btn" type="reset" (click)="revert()">Clear Values</button>
-  </form>
-</div> -->
-
+<app-header></app-header>
+<section>
 <div class="container">
   <form [formGroup]="loanApplicationForm" (ngSubmit)="onSubmit()" novalidate>
 
@@ -52,14 +25,27 @@
 
     <div class="row justify-content-center" formGroupName="loanData">
       <div class="col-5">
-        <label class="mdb-main-label">How do you want to be paid?</label>
+        <label class="mdb-main-label">Which loan are you applying for?</label>
+        
           
           <select class="browser-default  custom-select" formControlName="transferType" label="How do you want to be paid?">
             <option *ngFor="let transfer of transferTypes" [value]="transfer">{{transfer}}</option>
           </select> 
       </div>
     </div>
+    <div class="row justify-content-center mt-4">
+      <div class="col-5">
+        <label class="mdb-main-label">How do you want to be paid?</label>
+        <select class="browser-default  custom-select" formControlName="transferType">
+          <option *ngFor="let transfer of transferTypes" [value]="transfer">{{transfer}}</option>
+        </select> 
+      </div>
+    </div>
+    <div class="row justify-content-center mt-5">
+      <button class="btn btn-primary">Submit Application</button>
+    </div>
     <br>
-
   </form>
 </div>
+
+</section>
