--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,12 @@
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">SmartiFi</a>
       <div class="navbar-menu">
         <div class="navbar-start">
           <a class="navbar-item" [routerLink]="'/'">Home </a>
           <a *ngIf="loggedin && role ==='STUDENT'" class="navbar-item" [routerLink]="'/studentdash'"> Dashboard </a>
-          <a *ngIf="loggedin && role ==='LENDER'" class="navbar-item" [routerLink]="'/studentdash'"> Dashboard </a>
-          <a *ngIf="loggedin" class="navbar-item" [routerLink]="'/showapplications'"> Open Loan Applications </a>
-          <a *ngIf="loggedin" class="navbar-item" [routerLink]="'/apply'"> Apply For A Loan </a>
+          <a *ngIf="loggedin && role ==='LENDER'" class="navbar-item" [routerLink]="'/loandash'"> Dashboard </a>
+          <a *ngIf="loggedin && role ==='LENDER'" class="navbar-item" [routerLink]="'/showapplications'"> Open Loan Applications </a>
+          <a *ngIf="loggedin && role ==='STUDENT'" class="navbar-item" [routerLink]="'/apply'"> Apply For A Loan </a>
 
         </div>
       </div>
