--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,15 +1,18 @@
 <app-header></app-header>
-
-
-<div *ngIf="!login" class="pull-right">
-            
+<section>
+<div class="container">
+<div *ngIf="!login" class="row">
+    <div class="pull-right">   
     <a (click) = "role($event)" class="mr-5" [routerLink]="'/login'">Student Login</a>
     <a (click)="role($event)" [routerLink]="'/login'">Lender Login</a>
+    </div>  
 </div>
-<div *ngIf="login" class="pull-right">
+<div *ngIf="login" class="row">
+    <div class="pull-right">   
     <a class="mr-5" [routerLink]="'/logout'">Logout</a>
 </div>
-
+</div>
+</div>
 
 
 <div class="container">
@@ -23,3 +26,4 @@
         </div>
     </div>
 </div>
+</section>
