--- a/src/app/components/loandash/loandash.component.html
+++ b/src/app/components/loandash/loandash.component.html
@@ -1,5 +1,6 @@
-<div class="container">
+
 <app-header></app-header>
+<section>
 <div class="container">
     <div class="row">
         <div class="col-md-9">
@@ -18,6 +19,4 @@
         </div>
     </div>
 </div>
-
-</div>
-
+</section>
