--- a/src/app/loans/loans.component.html
+++ b/src/app/loans/loans.component.html
@@ -1,6 +1,5 @@
-<div class="container">
 <app-header></app-header>
-</div>
+<section>
 <div class="container">
 <h2>Open Applications</h2>
 
@@ -18,29 +17,29 @@
     </thead>
     <tbody>
       <tr *ngFor="let loan of loans">
-      <td *ngIf="loan.LoanHolder === 'N/A'">
+      <td *ngIf="loan.Issued === 'false'">
         {{loan.FirstName}}
       </td>
-      <td *ngIf="loan.LoanHolder === 'N/A'">
+      <td *ngIf="loan.Issued === 'false'">
         {{loan.LastName}}
       </td>
-      <td *ngIf="loan.LoanHolder === 'N/A'">
+      <td *ngIf="loan.Issued === 'false'">
         {{loan.LoanAmount}}
       </td>
-      <td *ngIf="loan.LoanHolder === 'N/A'">
+      <td *ngIf="loan.Issued === 'false'">
         {{loan.Rate | percent: '1.2-5'}}
       </td>
-      <td *ngIf="loan.LoanHolder === 'N/A'">
+      <td *ngIf="loan.Issued === 'false'">
         {{loan.DateIssued}}
       </td>
-      <td *ngIf="loan.LoanHolder === 'N/A'">
+      <td *ngIf="loan.Issued === 'false'">
         {{loan.Issued}}
       </td>
-      <td align="center" *ngIf="loan.LoanHolder === 'N/A'">
+      <td *ngIf="loan.Issued === 'false'">
         <button type="button" class="btn btn-indigo btn-m m-0">More</button>
       </td>
     </tr>
     </tbody>
   </table>
 </div>
-
+</section>
