--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-
+<section>
 <div class="container">
   <div class="row">
     <div class="col-md-12"> 
@@ -28,3 +28,4 @@
     <p>New User? Register <a [routerLink]="'/register'">here</a></p>
   </div>
 </div>
+</section>
