--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -1,5 +1,8 @@
-<p>
-  Successfully Registered. Please check your email to verify that you are a MSU Student.
-</p>
+<div class="col-md-12">
+  <h3>Application Submitted!</h3>
+</div>
+<div class="col-md-12">
+  <p class="lead">Thank You!</p>
+</div>
 
-<button class="btn btn-primary" [routerLink]="'/login'">Back to Login</button>
+<button class="btn btn-primary" [routerLink]="'/studentdash'">Back to Dashboard</button>
