Added application approval modal to Open Loan Applications page. Made broad styling changes with colors/typography

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,10 +2,10 @@
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
       <a class="navbar-brand" href="#">SmartiFi</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
+      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
       aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button> -->
       <div class="navbar-menu">
         <div class="navbar-start">
           <a class="navbar-item" [routerLink]="'/home'">Home </a>
