--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,13 +3,8 @@ div[class*=" col"] {
   border: 1px dotted black;
 }
 
-@font-face {
-  font-family: 'Charter Regular';
-  src: url('assets/fonts/charter_regular-webfont.eot');
-  src: url('assets/fonts/charter_regular-webfont.woff') format('woff'),
-  url('assets/fonts/charter_regular-webfont.eot') format('embedded-opentype'),
-  url('assets/fonts/charter_regular-webfont.ttf') format('truetype');
 
-  font-weight: normal;
-  font-style: normal;
+
+.btn-primary {
+  background-color: #80a690;
 }
