--- a/src/app/lender-dashboard/lender-dashboard/lender-dashboard.component.html
+++ b/src/app/lender-dashboard/lender-dashboard/lender-dashboard.component.html
@@ -1,5 +1,3 @@
-<app-header></app-header>
-
   <div class="container">
     <div class="row">
       <div class="col">
@@ -15,36 +13,39 @@
 
       </div>
 
+
       <div class="col">
-        <div class="col-lg-4"></div>  
         <div class="card">
-          <div class="card-header">
-            Total Loan Amount Outstanding
-          </div>
-          <div class="card-body">
-            <h4 class="card-title">
-              {{15000 | currency}}
-            </h4>
-          </div>
+          <div class="card-header">Awaiting Payment</div>
+          <div class="card-body"><h4>2</h4></div>
         </div>
       </div>
       <div class="col">
       <div class="card card-num-disp">
         <div class="card-header">
-          Test Header
+          Delinquent Loans
         </div>
         <div class="card-body">
-          <div class="card-title-num">Test Content</div>
+          <div class="card-title-num"><h4>3</h4></div>
         </div>
       </div>
     </div>
 
     <div class="col">
+      <div class="col-lg-4"></div>  
       <div class="card">
-        <div class="card-header">Test Title</div>
-        <div class="card-body">Test Body</div>
+        <div class="card-header">
+          Loan Amount Outstanding
+        </div>
+        <div class="card-body">
+          <h4 class="card-title">
+            {{15000 | currency}}
+          </h4>
+        </div>
       </div>
     </div>
+
+   
 
     </div>
       <div class="row">
