--- a/src/app/loans/loans.component.html
+++ b/src/app/loans/loans.component.html
@@ -1,4 +1,3 @@
-<app-header></app-header>
 <section>
 <div class="container">
 <h2>Open Applications</h2>
@@ -16,7 +15,36 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let loan of loans">
+      <tr>
+        <td>Parker</td>
+        <td>Nolan</td>
+        <td>$300.00</td>
+        <td>0.00%</td>
+        <td>12/29/2019</td>
+        <td>No</td>
+        <td>
+          <button type="button" class="btn btn-indigo btn-m m-0" (click)="loanModal.show()">Verify applicant information</button>
+        </td>
+      </tr>
+
+      <div mdbModal style="overflow: auto" #loanModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="loanModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable"  role="dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close pull-right" aria-label="Close" (click)="loanModal.hide()">
+                <span aria-hidden="true">×</span>
+              </button>
+              <h4 class="modal-title w-100" id="myModalLabel"><b>Verify applicant information</b></h4>
+            </div>
+        
+            <div class="modal-body">
+              <p>Test content</p>
+              <loan-modal></loan-modal>
+            </div>
+      </div>
+      </div>
+      </div>
+      <!-- <tr *ngFor="let loan of loans">
       <td *ngIf="loan.Issued === 'false'">
         {{loan.FirstName}}
       </td>
@@ -38,7 +66,7 @@
       <td *ngIf="loan.Issued === 'false'">
         <button type="button" class="btn btn-indigo btn-m m-0">More</button>
       </td>
-    </tr>
+    </tr> -->
     </tbody>
   </table>
 </div>
