--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,59 +1,72 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-color: #eee;
-    width: 100%;
-    height: 100%;
-  }
-
-section {
-  max-width: 1050px;
-  margin: 0 auto;
-  padding: 0 16px;
+  background-color: #FFF9F0;
 }
 
 .navbar {
-    background-color: rgb(134, 134, 134) !important;
-    
-}
-
-.navbar-brand {
-  margin-left: 28rem;
-  padding-right: 80px;
+  background-color: #FFF9F0 !important;
 }
 
 .table > tbody > tr > td {
-  vertical-align: middle;
+vertical-align: middle;
 }
 
-
-.pull-right {
-  margin-left: auto;
-  margin-right: 0;
+h1 {
+font-family: miller-display, serif;
+font-weight: 700;
+font-style: normal;
+font-size: 2.4rem;
+color: #013f29;
 }
 
-.navbar-item {
-  padding-right: 80px;
+.btn-primary {
+background-color: #80a690 !important;
 }
 
-.gap {
-  margin-top: 8rem;
+.btn-primary:active:focus {
+  background-color: #698876 !important;
 }
 
-.navbar-start a {
-  color: black;
-  text-decoration: none !important;
+p {
+font-family: din-2014, sans-serif;
+font-weight: 300;
+font-style: normal;
+font-size: 1.6rem;
 }
 
-.navbar-start a:hover {
-  color: #75b8c4;
-  font-weight: bold;
+html,
+body,
+header,
+#intro {
+  height: 100%;
 }
 
-.smartifi-primary {
-  color: #75b8c4
+#intro {
+  background: url("https://mdbootstrap.com/img/Photos/Horizontal/Nature/full%20page/img%20%283%29.jpg")no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-.navbar-brand:hover {
-  color: #75b8c4 !important;
-  font-weight: bold;
+.container {
+  padding: 2rem;
 }
+
+.navbar-brand {
+  // font-family: miller-headline;
+
+  font-style: oblique !important;
+  font-family: din-2014, sans-serif !important;
+
+  // font-style: normal;
+
+  font-weight: 700 !important;
+
+  font-size: 2.4rem !important;
+
+  color: 5px 5px 10px #013f29 !important;
+
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
