--- a/src/app/lender-dashboard/lender-dashboard/lender-dashboard.component.html
+++ b/src/app/lender-dashboard/lender-dashboard/lender-dashboard.component.html
@@ -9,7 +9,7 @@
           </div>
           <div class="card-body">
           <h4 class="card-title-num">
-            {{issuedLoans.length}}</h4>
+            {{numberIssued}}</h4>
           </div>
         </div>
 
@@ -23,7 +23,7 @@
           </div>
           <div class="card-body">
             <h4 class="card-title">
-              {{15000 | currency}}
+              {{totalIssued | currency}}
             </h4>
           </div>
         </div>
@@ -31,18 +31,18 @@
       <div class="col">
       <div class="card card-num-disp">
         <div class="card-header">
-          Test Header
+          Average Issued Interest Rate
         </div>
         <div class="card-body">
-          <div class="card-title-num">Test Content</div>
+          <h4 class="card-title">{{avgInterestIssued | percent: '1.2-5'}}</h4>
         </div>
       </div>
     </div>
 
     <div class="col">
       <div class="card">
-        <div class="card-header">Test Title</div>
-        <div class="card-body">Test Body</div>
+        <div class="card-header">New Applications Today</div>
+        <div class="card-body">None</div>
       </div>
     </div>
 
@@ -55,8 +55,8 @@
             </div>
             <div class="card-body d-flex flex-column">
               <h4 class="card-title">
-                <b>{{loans.length - issuedLoans.length}}</b> totalling
-                <b>{{152000 | currency }}</b>
+                <b>{{numberOpen}}</b> totalling
+                <b>{{totalReview | currency}}</b>
               </h4>
               <a href="showapplications" class="mt-auto btn btn-primary ">View Applications</a>
             </div>
@@ -66,18 +66,23 @@
         <div class="col-lg-6 col-md-6">
 
           <div class="card">
-            <div class="card-header">Progress</div>
+            <div class="card-header">Progress of Loans</div>
             <div class="card-body d-flex flex-column">
-              <div class="h6">Loans Issued</div>
-              <div class="progress">
-                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress" style="height:30px">
+                <div class="progress-bar progress-bar bg-success tooltip-target progress-bar-striped progress-bar-animated" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
+                  Issued
+                  </div>
+                  <div class="progress-bar progress-bar bg-danger tooltip-target progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+                  Denied
+                  </div>
+                  
               </div>
             </div>
           </div>
           
 
           <div class="card">
-            <div class="card-header">Test Card Chart</div>
+            <div class="card-header">Loan Applications - Past Month</div>
             <div style="display: block">
               <canvas mdbChart
                   [chartType]="chartType"
