--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,24 +8,25 @@
     </div>
   </div>
 </div>
-
-<div class="col-md-12 col-lg-12 col-xs-12">
-  <p class="text-danger" *ngIf="!status">Invalid Login Credentials!</p>
-  <form class="formstyle" (submit)="login($event)">
-    <div class="form-group">
-      <label>Email</label>
-      <input type="text" name="username" class="form-control" [formControl]="emailFormControl" required>
+<div class="container">
+  <div class="col-md-12 col-lg-12 col-xs-12">
+    <p class="text-danger" *ngIf="!status">Invalid Login Credentials!</p>
+    <form class="formstyle" (submit)="login($event)">
+      <div class="form-group">
+        <label>Email</label>
+        <input type="text" name="username" class="form-control" [formControl]="emailFormControl" required>
+      </div>
+      <div class="form-group">
+        <label>Password</label>
+        <input type="password" name="password" class="form-control" [formControl]="passwordFormControl" required>
+      </div>
+      <button type="submit" [disabled]="emailFormControl.invalid || passwordFormControl.invalid" class="btn btn-primary">Login</button>
+    </form>
+  </div>
+  <div *ngIf="loginRole === 'Student Login'" class="contianer">
+    <div class="col-md-12 formstyle">
+      <p>New User? Register <a [routerLink]="'/register'">here</a></p>
     </div>
-    <div class="form-group">
-      <label>Password</label>
-      <input type="password" name="password" class="form-control" [formControl]="passwordFormControl" required>
-    </div>
-    <button type="submit" [disabled]="emailFormControl.invalid || passwordFormControl.invalid" class="btn btn-primary">Login</button>
-  </form>
-</div>
-<div *ngIf="loginRole === 'Student Login'" class="contianer">
-  <div class="col-md-12 formstyle">
-    <p>New User? Register <a [routerLink]="'/register'">here</a></p>
   </div>
 </div>
 </section>
