--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,21 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-color: #eee;
-    width: 100%;
-    height: 100%;
+  background-color: #FFF9F0;
   }
-
-section {
-  max-width: 1050px;
-  margin: 0 auto;
-  padding: 0 16px;
-}
 
 .navbar {
     background-color: rgb(134, 134, 134) !important;
     
 }
 
+h1 {
+  font-family: miller-display, serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 2.4rem;
+  color: #013f29;
+  }
 .navbar-brand {
   margin-left: 28rem;
   padding-right: 80px;
@@ -24,23 +23,17 @@ section {
 .table > tbody > tr > td {
   vertical-align: middle;
 }
-
+.btn-primary {
+  background-color: #80a690 !important;
+  }
+  
+  .btn-primary:active:focus {
+    background-color: #698876 !important;
+  }
 
 .pull-right {
   margin-left: auto;
   margin-right: 0;
-}
-.tooltip-target { position: relative; }
-
-.tooltip-content { 
-     display: none; 
-     position: absolute;
-     left: 50%;
-     top: 0px; // set this whatever you want
-}
-
-.tooltip-target:hover .tooltip-content {
-    display: block;
 }
 
 .navbar-item {
@@ -69,3 +62,49 @@ section {
   color: #75b8c4 !important;
   font-weight: bold;
 }
+
+
+p {
+  font-family: din-2014, sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 1.6rem;
+  }
+
+
+  html,
+body,
+header,
+#intro {
+  height: 100%;
+}
+#intro {
+  background: url("https://mdbootstrap.com/img/Photos/Horizontal/Nature/full%20page/img%20%283%29.jpg")no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+  
+.container {
+  padding: 2rem;
+}
+  
+.navbar-brand {
+  // font-family: miller-headline;
+
+  font-style: oblique !important;
+  font-family: din-2014, sans-serif !important;
+
+  // font-style: normal;
+
+  font-weight: 700 !important;
+
+  font-size: 2.4rem !important;
+
+  color: 5px 5px 10px #013f29 !important;
+
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
