--- a/src/app/loans/loans.component.html
+++ b/src/app/loans/loans.component.html
@@ -43,4 +43,58 @@
     </tbody>
   </table>
 </div>
+
+<div class="container">
+  <h2>Issued Loans</h2>
+  
+    <table id="allLoansTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+      <thead>
+        <tr>
+          <th class="th-sm">First Name</th>
+          <th class="th-sm">Last Name</th>
+          <th class="th-sm">Loan Amount</th>
+          <th class="th-sm">Rate</th>
+          <th class="th-sm">Transfer Type</th>
+          <th class="th-sm">Issued</th>
+          <th class="th-sm">Payment Status</th>
+        </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let loan of loans" >
+        <td *ngIf="loan.Issued === 'true'">
+          {{loan.FirstName}}
+        </td>
+        <td *ngIf="loan.Issued === 'true'">
+          {{loan.LastName}}
+        </td>
+        <td *ngIf="loan.Issued === 'true'">
+          {{loan.LoanAmount}}
+        </td>
+        <td *ngIf="loan.Issued === 'true'">
+          {{loan.Rate | percent: '1.2-5'}}
+        </td>
+        <td *ngIf="loan.Issued === 'true'">
+          {{loan.PaymentMethod}}
+        </td>
+        <td *ngIf="loan.Issued === 'true'">
+          {{loan.Issued}}
+        </td>
+        <td *ngIf="loan.Issued === 'true' && loan.LenderPaid === false">
+          <button type="button" class="btn btn-indigo btn-m m-0" (click)="openModal(loan.UserEmail, loan.FirstName, loan.LastName, loan.LoanAmount, loan.Rate, loan.PaymentMethod, loan.Issued)">Mark as Paid</button>
+        </td>
+        <td *ngIf="loan.Issued === 'true' && loan.LenderPaid === true">
+          <div class="row">
+            <div class="col-md-2 offset-1">
+          <i style="color:#32CD32;" class="fas fa-check-circle fa-2x"></i>
+          </div>
+          <div class="col-md-9">
+          <p style="font-size: 20px;">Student Paid</p>
+        </div>
+          </div>
+        </td>
+      </tr>
+  
+      </tbody>
+    </table>
+  </div>
 </section>
