--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -31,6 +31,20 @@
         <input placeholder="Last name" type="text" name="lastname" class="form-control" [formControl]="lastNameFormControl">
         
       </div>
+
+      <div class="form-group">
+        <label>APID</label>
+        <br>
+        <label class="text-danger" *ngIf="APIDFormControl.hasError('required')">APID required</label>
+        <input placeholder="APID" type="text" name="apid" class="form-control" [formControl]="APIDFormControl">
+        
+      </div>
+      <div class="form-group">
+        <label>Drivers License</label>
+        <br>
+        <label class="text-danger" *ngIf="DriversLicenseFormControl.hasError('required')">Drivers License required</label>
+        <input placeholder="Drivers License" type="text" name="driverslicense" class="form-control" [formControl]="DriversLicenseFormControl">
+      </div>
       <div class="form-group">
         
         <label>MSU Email</label>
