--- a/src/app/success-register/success-register.component.html
+++ b/src/app/success-register/success-register.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="col-md-12">
   <h3>Successfully Registered!</h3>
 </div>
@@ -6,3 +7,4 @@
 </div>
 
 <button class="btn btn-primary" [routerLink]="'/'">Back to Home</button>
+</div>
