--- a/src/app/student-dashboard/student-dashboard.component.html
+++ b/src/app/student-dashboard/student-dashboard.component.html
@@ -43,6 +43,17 @@
         </div>
       </div>
     </div>
+    <div class="col-md-3">
+      <div style="height: 10rem;" class="card">
+        <div class="card-header">
+          Remaining Balance
+        </div>
+        <div class="card-body">
+        <h4 class="card-title">{{RemainingBalance | currency}}</h4>
+        </div>
+      </div>
+
+    </div>
   </div>
 </div>
 <div *ngIf="LoanStatus==='APPROVED'" class="container">
