Another chart added to Lender dashboard. More data displayed on open apps

--- a/src/app/loans/loanmodal/loanmodal.component.html
+++ b/src/app/loans/loanmodal/loanmodal.component.html
@@ -9,7 +9,8 @@
     
         <div class="modal-body">
           <p>Loan Applicant - {{UserData.FirstName}} {{UserData.LastName}}</p>
-          
+          <p>APID - {{UserData.APID}}</p>
+          <p>Drivers License - {{UserData.DriversLicense}}</p>
         <form [formGroup]="loanForm">
             <div class="row">
                     <label for="inputHolds">Holds on account?</label>
