--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,6 +63,16 @@ h1 {
   font-weight: bold;
 }
 
+.modal-header.successya {
+  background-color: #32CD32 !important;
+  border-color: #32CD32 !important;
+  color:#ffffff !important;
+}
+
+.modal-header.primaryya {
+  background-color: #80a690 !important;
+  border-color: #80a690 !important;
+}
 
 p {
   font-family: din-2014, sans-serif;
