--- a/src/app/lender-dashboard/lender-dashboard/lender-dashboard.component.html
+++ b/src/app/lender-dashboard/lender-dashboard/lender-dashboard.component.html
@@ -48,7 +48,7 @@
     </div>
       <div class="row">
         <div class="col-lg-6 col-md-6">
-          <div class="card tall-card">
+          <div class="card">
             <div class="card-header">
               Applications Awaiting Review
             </div>
@@ -61,25 +61,29 @@
             </div>
           </div>
         </div>
-
         <div class="col-lg-6 col-md-6">
 
           <div class="card">
             <div class="card-header">Progress of Loans</div>
             <div class="card-body d-flex flex-column">
               <div class="progress" style="height:30px">
-                <div class="progress-bar progress-bar bg-success tooltip-target progress-bar-striped progress-bar-animated" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
-                  Issued
+                <div class="progress-bar progress-bar bg-success tooltip-target progress-bar-striped progress-bar-animated" role="progressbar" [style.width]="getNumberIssued()+'%'"
+                 aria-valuenow="{{numberIssued}}" aria-valuemin="0" aria-valuemax="{{totalLoans}}">
+                  Issued - {{numberIssued}}
                   </div>
-                  <div class="progress-bar progress-bar bg-danger tooltip-target progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar progress-bar bg-danger tooltip-target progress-bar-striped progress-bar-animated" role="progressbar" [style.width]="getNumberRejected()+'%'" aria-valuenow="{{numberRejected}}" aria-valuemin="0" aria-valuemax="{{totalLoans}}">
                   Denied
                   </div>
                   
               </div>
             </div>
           </div>
-          
+          </div>
+      </div>
+      <div class="row">
 
+          
+          <div class="col-lg-6 col-md-6">
           <div class="card">
             <div class="card-header">Loan Applications - Past Month</div>
             <div style="display: block">
@@ -96,8 +100,23 @@
             </div>
           </div>
         </div>
+        
+        <div class="col-lg-6 col-md-6">
+          <h1 class="text-center">Paid Status</h1>
+            <div style="display: block">
+              <canvas mdbChart
+                  [chartType]="chartTypeDough"
+                  [datasets]="chartDatasetsDough"
+                  [labels]="chartLabelsDough"
+                  [colors]="chartColorsDough"
+                  [options]="chartOptionsDough"
+                  [legend]="true"
+                  (chartHover)="chartHoveredDough($event)"
+                  (chartClick)="chartClickedDough($event)">
+              </canvas>
+            </div>
+        </div>
+
+
 
       </div>
-     
-
- 
