More mechanic fixes. More button additions according to lender specification

--- a/src/app/loans/info/info.component.html
+++ b/src/app/loans/info/info.component.html
@@ -10,6 +10,7 @@
     <p>Loan Applicant - {{UserData.FirstName}} {{UserData.LastName}}</p>
     <p>APID - {{UserData.APID}}</p>
     <p>Drivers License - {{UserData.DriversLicense}}</p>
+    <p>Approved by - {{UserData.markedPaidBy}}</p>
   </div>
 </div>
 
