--- a/src/app/lender-dashboard/lender-dashboard/lender-dashboard.component.html
+++ b/src/app/lender-dashboard/lender-dashboard/lender-dashboard.component.html
@@ -102,7 +102,8 @@
         </div>
         
         <div class="col-lg-6 col-md-6">
-          <h1 class="text-center">Paid Status</h1>
+          <div class="card">
+          <div class="card-header">Paid Status</div>
             <div style="display: block">
               <canvas mdbChart
                   [chartType]="chartTypeDough"
@@ -115,6 +116,7 @@
                   (chartClick)="chartClickedDough($event)">
               </canvas>
             </div>
+        </div>
         </div>
 
 
