--- a/src/app/loans/loanmodal/loanmodal.component.html
+++ b/src/app/loans/loanmodal/loanmodal.component.html
@@ -11,10 +11,10 @@
           <p>Loan Applicant - {{UserData.FirstName}} {{UserData.LastName}}</p>
           <p>APID - {{UserData.APID}}</p>
           <p>Drivers License - {{UserData.DriversLicense}}</p>
-        <form [formGroup]="loanForm">
+        <form>
             <div class="row">
                     <label for="inputHolds">Holds on account?</label>
-                    <select class="browser-default custom-select mb-4 form-control" formControlName="noHolds" id="inputHolds" required>
+                    <select class="browser-default custom-select mb-4 form-control" [formControl]="noHolds" id="inputHolds" required>
         
                         <option value="1">Yes, there are holds on the account</option>
                         <option value="2">No, there are no holds on the account</option>
@@ -22,7 +22,7 @@
                 </div>
             <div class="row">
                 <label for="inputEnrolled">Are they enrolled full time?</label>
-                <select class="browser-default custom-select mb-4 form-control" formControlName="isEnrolled" id="inputHolds" required>
+                <select class="browser-default custom-select mb-4 form-control" [formControl]="isEnrolled" id="inputHolds" required>
         
                     <option value="1">Yes, they are enrolled full time</option>
                     <option value="2">No, they are not enrolled full time</option>
@@ -30,7 +30,7 @@
             </div>
             <div class="row">
                 <label for="inputTaxpayer">Are they an ASMSU/COGS taxpayer?</label>
-                <select class="browser-default custom-select mb-4 form-control" formControlName="isTaxpayer" id="inputHolds" required>
+                <select class="browser-default custom-select mb-4 form-control" [formControl]="isTaxpayer" required>
         
                     <option value="1">Yes, they are an ASMSU/COGS taxpayer</option>
                     <option value="2">No, they are not an ASMSU/COGS taxpayer</option>
@@ -38,7 +38,7 @@
             </div>
             <div class="row">
                 <label for="inputDefaulted">Have they defaulted on an ASMSU loan before?</label>
-                <select class="browser-default custom-select mb-4 form-control" formControlName="hasDefaulted" id="inputDefaulted" required>
+                <select class="browser-default custom-select mb-4 form-control" [formControl]="hasDefaulted" id="inputDefaulted" required>
         
                     <option value="1">Yes, they have defaulted on an ASMSU loan</option>
                     <option value="2">No, they have not defaulted on an ASMSU loan</option>
@@ -46,11 +46,12 @@
             </div>
             <div class="row">
                 <label for="inputNotes">Any additional notes:</label>
-                <textarea id="textarea" class="form-control mb-4" formControlName="lenderNotes" placeholder="You can type here"></textarea>
+                <textarea id="textarea" class="form-control mb-4" [formControl]="lenderNotes" placeholder="You can type here"></textarea>
             </div>
             <div class="row">
                 <div class="col"><button type="button" class="btn btn-danger" style="height: 4rem;"(click)="onReject()">Deny Application</button></div>
-                <div class="col"> <button type="submit" class="btn btn-primary" style="height: 4rem;" (click)="onSubmit()">Approve Application</button></div>
+                <div class="col"> <button [disabled]="isTaxpayer.invalid || isTaxpayer.value == '2' || noHolds.invalid || noHolds.value == '1'
+                    || hasDefaulted.invalid || hasDefaulted == '1' || isEnrolled.invalid || isEnrolled == '2'" type="submit" class="btn btn-primary" style="height: 4rem;" (click)="onSubmit()">Approve Application</button></div>
         
             </div>
         
