--- a/src/app/student-dashboard/student-dashboard.component.html
+++ b/src/app/student-dashboard/student-dashboard.component.html
@@ -59,7 +59,7 @@
 <div *ngIf="LoanStatus==='APPROVED'" class="container">
   <p><b>Next Payment Due Date:</b> {{NextPayment}}</p>
   <p><b>Amount Due: </b>{{AmountDue | currency}}</p>
-  <p><b>Payment Status:</b> {{isPaid}}</p>
+  <!-- <p><b>Payment Status:</b> {{isPaid}}</p> -->
   <p class="lead"><a href="https://commerce.cashnet.com/cashneti/selfserve/BrowseCatalog.aspx" target="_blank"><button class="btn btn-primary">Pay Now</button></a></p>
 </div>
 <div class="container gap">
